[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scripts/unit_list.gd" type="Script" id=1]

[node name="List" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprites" type="HBoxContainer" parent="."]
margin_left = -280.0
margin_right = 280.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite1" type="Sprite" parent="Sprites"]

[node name="Sprite2" type="Sprite" parent="Sprites"]

[node name="Sprite3" type="Sprite" parent="Sprites"]

[node name="Sprite4" type="Sprite" parent="Sprites"]

[node name="Sprite5" type="Sprite" parent="Sprites"]
